# alsh

./: .gitignore  ALSHSPEC.md  Cargo.toml  Makefile  README.md  stdlib.md
.cargo/: config.toml
samples/: feature_showcase.alsh  format_bytes.alsh  sysinfo.alsh
src/: completion.rs  control_flow.rs  editor.rs  executor.rs  jobs.rs  main.rs  parser.rs  signals.rs  terminal.rs
src/builtin/: bg_builtin.rs  cd.rs  dirs_builtin.rs  disown_builtin.rs  exit.rs  export.rs  fg_builtin.rs  help.rs  id_builtin.rs  jobs_builtin.rs  let_builtin.rs  logname_builtin.rs  mod.rs  pwd.rs  realpath_builtin.rs  set_builtin.rs  type_builtin.rs  which_builtin.rs
tests/: 5min.alsh  Ctest.alsh  TEST.alsh  WHILE.alsh  bail_test.alsh  chain_test_bare_len.alsh  chain_test_simple.alsh  cstdlib_test.alsh  dataflow_test.alsh  example.alsh  exit_test.alsh  hello.alsh  noffi_test.alsh  sample.alsh  stdlib_test.alsh  tch.alsh  test_echo.alsh  test_justrunit.alsh  test_println_simple.alsh  test_simple.alsh  test_std_println.alsh  utils.alsh  v1.1stuff.alsh
